--- a/css/lib.css
+++ b/css/lib.css
@@ -18,6 +18,10 @@
 
     --sun: url(../assets/images/icon-sun-dark.svg);
     --moon: url(../assets/images/icon-moon-dark.svg);
+
+    --t-color: var(--dark-navy);
+    --p-color: var(--grey-navy);
+    --q-color: var(--white);
 }
 
 * {
@@ -36,7 +40,7 @@ body {
     background-repeat: no-repeat;
     background-color: var(--background-color);
     background-size: cover;
-    color: var(--dark-navy);
+    color: var(--t-color);
     padding-top: 83px;
 }
 @media (max-width: 1188px) {
@@ -52,6 +56,19 @@ body {
         padding: 16px 24px;
         align-items: flex-start !important;
     }
+}
+
+body.dark{
+    --background-img-desktop: url(../assets/images/pattern-background-desktop-dark.svg);
+    --background-img-tablet: url(../assets/images/pattern-background-tablet-dark.svg);
+    --background-img-mobile: url(../assets/images/pattern-background-mobile-dark.svg);
+    --background-color: var(--dark-navy);
+    --sun: url(../assets/images/icon-sun-light.svg);
+    --moon: url(../assets/images/icon-moon-light.svg);
+
+    --t-color: var(--white);
+    --p-color: var(--light-bluish);
+    --q-color: var(--navy)
 }
 
 .hl {
@@ -258,14 +275,14 @@ section{
 .progress{
     width: 100%;
     height: 16px;
-    background-color: var(--white);
+    background-color: var(--q-color);
     border-radius: 40px;
     padding: 4px;
     display: flex;
     align-items: center;
 }
 .progress span{
-    width: 50%;
+    width: 0%;
     height: 100%;
     background-color: var(--purple);
     border-radius: 45px;
