--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ section>nav h3 {
 section>nav h3 .icon-title {
     width: 56px;
     height: 56px;
-    background-color: #F6E7FF;
+    background-color: var(--light-grey);
     border-radius: 8px;
     padding: 10px;
 }
@@ -66,7 +66,7 @@ section>nav h3 .icon-title img {
 }
 
 .start .text>p.bs {
-    color: var(--grey-navy);
+    color: var(--p-color);
 }
 
 .start .category {
@@ -75,10 +75,10 @@ section>nav h3 .icon-title img {
 }
 
 .start .category li a {
-    color: var(--dark-navy);
+    color: var(--t-color);
     gap: 32px;
     padding: 20px;
-    background-color: var(--white);
+    background-color: var(--q-color);
     border-radius: 24px;
 }
 
@@ -87,7 +87,7 @@ section>nav h3 .icon-title img {
     width: 56px;
     border-radius: 8px;
     padding: 8px;
-    background-color: #FFF1E9;
+    background-color: var(--light-grey);
 }
 
 .start .category li a .icon img {
@@ -148,12 +148,12 @@ section>nav h3 .icon-title img {
 }
 
 .quiz .text {
-    max-width: 465px;
+    width: 465px;
 }
 
 .quiz .text>p.bs {
     margin-bottom: 27px;
-    color: var(--grey-navy);
+    color: var(--p-color);
 }
 
 .quiz .text>p.hm {
@@ -171,9 +171,9 @@ section>nav h3 .icon-title img {
 }
 
 .quiz .question input[type="radio"]+label {
-    color: var(--dark-navy);
+    color: var(--t-color);
     padding: 20px;
-    background-color: var(--white);
+    background-color: var(--q-color);
     border-radius: 24px;
     border: 3px solid transparent;
     transition: .3s;
@@ -251,12 +251,11 @@ section>nav h3 .icon-title img {
         max-width: 640px;
     }
     .quiz .question {
-        max-width: 100%;
+        width: 100%;
     }
 
     .quiz .text {
         width: 100%;
-        max-width: unset;
         margin-bottom: 64px;
     }
 
@@ -358,7 +357,7 @@ section>nav h3 .icon-title img {
 .score .card h3 .icon-title {
     width: 56px;
     height: 56px;
-    background-color: #F6E7FF;
+    background-color: var(--light-grey);
     border-radius: 8px;
     padding: 10px;
 }
